# registries

./: .papr.yml  .redhat-ci.yaml  .redhat-ci.yml  Makefile  Makefile-docs.am  Makefile.am  README.md  autogen.sh  configure.ac  registries.c  registries.conf  registries.fedora  registries.redhat  registries.service  setup.py
docs/: registries.1  registries.1.md  registries.conf.5.md
registries/: registries.py  registries_migrator.py
registries.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
registries/tests/: registries.toml  registries.yaml  registries.yaml.no_block  registries.yaml.no_insecure  registries.yaml.no_secure  unit_tests.py
test/: test.bats  test.sh  test0.toml  test0.yaml  test1.toml  test1.yaml  test2.toml  test2.yaml  test3.toml  test3.yaml  test4.toml  test4.yaml  test6.toml  test6.yaml  test98.toml  test99.yaml
